Text spacing fixes

--- a/src/Content.css
+++ b/src/Content.css
@@ -1,6 +1,13 @@
+.Content {
+  /* border: 1px solid green; */
+}
+
 pre {
+  margin: 0;
   white-space: pre-wrap;
   word-wrap: break-word;
+  color: rgba(255, 255, 255, 0.75);
+  /* font-weight: bold; */
 }
 
 pre.err {
